welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: value and is not a member of Boolean
  if (a<=13 and 19<=a){return true}
            ^hasTeen:3: error: value and is not a member of Boolean
  if (b<=13 and 19<=b){return true}
            ^hasTeen:4: error: value and is not a member of Boolean
  if (c<=13 and 19<=c){return true}
            ^